# documentation-develop-kde-org

./: .clang-format  .gitignore  .gitlab-ci.yml  .htmltest.yml  .kateconfig  .kde-ci.yml  CMakeLists.txt  KWidgetsAddons.tags.xml  Kirigami2.tags.xml  Messages.sh  README.md  _index.md  config.toml  config.yaml  epilog.py  globalconf.py  go.mod  go.sum  justfile  makemedia.php  requirements.txt
.gitlab/issue_templates/: Default.md
.gitlab/merge_request_templates/: Default.md
.reuse/: dep5
HIG/: requirements.txt
HIG/source/: conf.py  index.rst
Kirigami/: requirements.txt
_data/: akonadi.json  components_map.json  kcmutils.json  kconfig.json  kconfigwidgets.json  kcoreaddons.json  kdeclarative.json  kdecoration2.json  keys  keys.yaml  ki18n.json  kio.json  kirigami2.json  kitemmodels.json  kmime.json  kpackage.json  krunner.json  ktexteditor.json  ktextwidgets.json  kwidgetsaddons.json  kxmlgui.json  libksysguard.json  mailcommon.json  plasma-framework.json  plasma-workspace.json  plasma.json  qtdbus.json  qtgui.json  qtqml.json  qtquick.json  qtquickcontrols.json  qtwidgets.json
content/: _index.html  design.md  develop.md  distribute.md
content/docs/akonadi/using_akonadi_applications/src/: CMakeLists.txt  mailmodel.cpp  mailmodel.h  messagewrapper.h  quickmail.cpp
content/docs/akonadi/using_akonadi_applications/src/contents/ui/: main.qml
content/docs/d-bus/using_custom_types_with_dbus/: CMakeLists.txt  Chat.xml  ChatAdaptor.h  ChatInterface.cpp  ChatWindow.cpp  Message.cpp  Message.hpp  enumDBus.hpp  main.cpp  marshaling.cpp
content/docs/extend/kate/plugin/: CMakeLists.txt  _index.md  plugin.h  plugin.json
content/docs/extend/kcm/: CMakeLists.txt  kcm_time.json  timesettings.cpp
content/docs/extend/kcm/package/: metadata.desktop
content/docs/extend/plasma/krunner/homefilesrunner/: CMakeLists.txt  homefilesrunner.cpp  homefilesrunner.h  homefilesrunner.json  kcm_homefilesrunner.cpp  kcm_homefilesrunner.h
content/docs/features/kcm/: CMakeLists.txt  kcm_time.json
content/docs/features/kcm/src/: CMakeLists.txt  kcm_time.json  timesettings.cpp  timesettings.h
content/docs/features/kcm/src/ui/: main.qml
content/docs/getting-started/kirigami/advanced-add_about_page/: CMakeLists.txt  index.md
content/docs/getting-started/kirigami/advanced-add_about_page/src/: CMakeLists.txt  main.cpp
content/docs/getting-started/kirigami/advanced-add_about_page/src/contents/ui/: AddEditSheet.qml  KountdownDelegate.qml  main.qml
content/docs/getting-started/kirigami/introduction-getting_started/: CMakeLists.txt  index.md  org.kde.tutorial.desktop
content/docs/getting-started/kirigami/introduction-getting_started/src/: CMakeLists.txt  main.cpp
content/docs/getting-started/kirigami/introduction-getting_started/src/contents/ui/: main.qml
content/docs/getting-started/kirigami/introduction-separatefiles/: AddEditSheet.qml  CMakeLists.txt  KountdownDelegate.qml  Main.qml  index.md  main.qml
content/docs/getting-started/kirigami/introduction-separatefiles/components/: AddEditDialog.qml  CMakeLists.txt  KountdownDelegate.qml
content/docs/getting-started/kirigami/setup-python/: index.md  org.kde.kirigami_python.desktop  pyproject.toml
content/docs/getting-started/kirigami/setup-python/src/: app.py
content/docs/getting-started/kirigami/setup-rust/: CMakeLists.txt  Cargo.toml  build.rs  index.md  org.kde.kirigami_rust.desktop
content/docs/getting-started/kirigami/setup-rust/src/: main.rs
content/docs/getting-started/kirigami/setup-rust/src/qml/: Main.qml
content/docs/getting-started/kxmlgui/hello_world/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp
content/docs/getting-started/kxmlgui/main_window/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
content/docs/getting-started/kxmlgui/using_actions/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  texteditorui.rc
content/docs/getting-started/python/pyqt-app/src/: MANIFEST.in  README.txt  __main__.py  main-2.qml  main.qml  md_converter.py  org.kde.simplemdviewer.desktop  org.kde.simplemdviewer.json  org.kde.simplemdviewer.metainfo.xml  pyproject.toml  setup-2.cfg  setup.cfg  simplemdviewer_app-2.py  simplemdviewer_app-3.py  simplemdviewer_app.py
content/docs/getting-started/rust/rust-app/simplemdviewer/: CMakeLists.txt  Cargo.toml  build.rs
content/docs/getting-started/rust/rust-app/simplemdviewer/src/: main.rs
content/docs/getting-started/rust/rust-app/simplemdviewer/src/qml/: Main.qml
content/docs/getting-started/rust/rust-app/simplemdviewer_final/: CMakeLists.txt  CMakeLists2.txt  Cargo.toml  README.md  build.rs  cargo-sources.json  org.kde.simplemdviewer.desktop  org.kde.simplemdviewer.json  org.kde.simplemdviewer.metainfo.xml
content/docs/getting-started/rust/rust-app/simplemdviewer_final/src/: main.rs  mdconverter.rs
content/docs/getting-started/rust/rust-app/simplemdviewer_final/src/qml/: Main.qml
content/docs/getting-started/rust/rust-bindings/: CMakeLists.txt  Cargo.toml  Main.qml  index.md  main.rs
content/docs/getting-started/rust/rust-mixed/simplemdviewer/: CMakeLists.txt  Cargo.toml  build.rs  org.kde.simplemdviewer.desktop  org.kde.simplemdviewer.metainfo.xml
content/docs/getting-started/rust/rust-mixed/simplemdviewer/src/: lib.rs  main.cpp
content/docs/getting-started/rust/rust-mixed/simplemdviewer/src/qml/: Main.qml
content/docs/kirigami/tree-views/: CMakeLists.txt  main.cpp  main.qml
content/docs/plasma/krunner/example/: CMakeLists.txt  homefilesrunner.cpp  homefilesrunner.h  plasma-runner-example-homefiles.desktop
content/docs/use/kxmlgui/hello_world/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp
content/en/docs/getting-started/saving_and_loading/: CMakeLists.txt  _index.md  mainwindow.h  savingloadingui.rc
data/: keys.yaml
i18n/: en.toml  en.yaml
layouts/: 404.html  home.html
scripts/: .gitignore  custom_generation.py  doxygen_integration.py  extract-plasma-applet-config-keys.py  fetch_po.py  icon_extractor.py
source/: conf.py  index.rst
static/: .htaccess
tests/: CMakeLists.txt  url-checker.py
tests/data/: ignore_urls.txt
(+1713 files in other folders)
